# Author: Subhasis Ray
# Date: Sun Jul  7

shell_src = ['Shell.cpp',
             'ShellCopy.cpp',
             'ShellThreads.cpp',
             'LoadModels.cpp',
             'SaveModels.cpp',
             'Neutral.cpp',
             'Wildcard.cpp',
             'testShell.cpp']

shell_lib = static_library('shell', shell_src)

