# Author: Subhasis Ray
# Date: Sun Jul  7

synapse_src = ['GraupnerBrunel2012CaPlasticitySynHandler.cpp',
                'RollingMatrix.cpp',
                'SeqSynHandler.cpp',
                'SimpleSynHandler.cpp',
                'STDPSynapse.cpp',
                'STDPSynHandler.cpp',
                'Synapse.cpp',
                'SynHandlerBase.cpp',
                'testSynapse.cpp']

synapse_lib = static_library('synapse', synapse_src)

